openshift/07-mailhog-deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: mailhog
  namespace: helpdesk
  labels:
    app: mailhog
spec:
  replicas: 1
  selector:
    app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog:latest
          ports:
            - containerPort: 1025
              protocol: TCP
              name: smtp
            - containerPort: 8025
              protocol: TCP
              name: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
  triggers:
    - type: ConfigChange
