openshift/13-mailer-deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: mailer
  namespace: helpdesk
  labels:
    app: mailer
spec:
  replicas: 1
  selector:
    app: mailer
  template:
    metadata:
      labels:
        app: mailer
    spec:
      containers:
        - name: mailer
          image: image-registry.openshift-image-registry.svc:5000/helpdesk/mailer:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - mailer
        from:
          kind: ImageStreamTag
          name: mailer:latest
          namespace: helpdesk
