openshift/08-mailhog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  namespace: helpdesk
  labels:
    app: mailhog
spec:
  ports:
    - port: 1025
      targetPort: 1025
      protocol: TCP
      name: smtp
    - port: 8025
      targetPort: 8025
      protocol: TCP
      name: http
  selector:
    app: mailhog
  type: ClusterIP
