openshift/15-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: helpdesk
  labels:
    app: frontend
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: frontend
  type: ClusterIP
